--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,22 @@ requires-python = ">=3.8"
 dependencies = [
     "ollama",
 ]
+authors = [
+    {name = "Ryan Liu", email = "ryanliu6@pm.me"},
+]
+license = {text = "MIT"}
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+]
+keywords = ["ai", "ollama", "password-management"]
+readme = "README.md"
 
 [project.optional-dependencies]
 dev = [
@@ -17,6 +33,9 @@ dev = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["ollama", "passwords"]
 
 [tool.black]
 line-length = 88
