--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,11 +25,13 @@ readme = "README.md"
 
 [project.optional-dependencies]
 dev = [
-    "black",
-    "isort",
-    "flake8",
-    "mypy",
-    "types-click",
+    "pytest>=7.0",
+    "pytest-cov>=4.0",
+    "black>=23.0",
+    "isort>=5.0",
+    "flake8>=6.0",
+    "mypy>=1.0",
+    "pre-commit>=3.5.0",
 ]
 
 [build-system]
