--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dev = [
     "black>=23.0",
     "isort>=5.0",
     "flake8>=6.0",
+    "flake8-docstrings>=1.7.0",
     "mypy>=1.0",
     "pre-commit>=3.5.0",
 ]
