--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["ollama", "passwords"]
+packages = ["llm", "passwords"]
 
 [tool.black]
 line-length = 88
