--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,11 +27,12 @@ readme = "README.md"
 dev = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
-    "black>=23.0",
-    "isort>=5.0",
-    "flake8>=6.0",
+    "black>=24.10.0",
+    "isort>=5.13.2",
+    "flake8>=7.1.1",
     "flake8-docstrings>=1.7.0",
-    "mypy>=1.0",
+    "mypy>=1.13.0",
+    "types-click>=7.0",
     "pre-commit>=3.5.0",
 ]
 
